<resources>
    <string name="app_name">工大体育</string>
    <string name="name_tip">输入您的手机号</string>
    <string name="password_tip1">请输入你的密码</string>
    <string name="password_tip2">请再次输入密码</string>
    <string name="login">登录</string>
    <string name="identifying_code">请输入验证码</string>
    <string name="get_identifying_code">获取</string>
    <string name="register">注册</string>
    <string name="verification">提交</string>
    <string name="ForgetPW">忘记密码</string>
    <string name="skip_login">跳过登录</string>
    <string name="verificate_phone_number">验证验证码</string>
    <string name="change_password">修改密码</string>
    <string name="change">修改</string>
    <string name="search">搜索</string>
    <string name="title_activity_user">UserActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
