<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#000000"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Button_VerificationActivity_to_MainActivity"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/btn_login_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="13sp"
            android:textColor="#f8f8f8"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/TextView_Verification" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#e3e3e3e3"
        android:orientation="vertical">

        <EditText
            android:id="@+id/EditText_Verification_userName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#ffffff"
            android:hint="@string/name_tip"
            android:textSize="11sp"
            android:singleLine="true"
            android:textColorHint="#7f7f7f7f"
            android:layout_marginTop="1dp"
            android:gravity="center" />


        <Button
            android:id="@+id/Button_Verification"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:background="@drawable/btn_login_login"
            android:gravity="center"
            android:text="@string/verification"
            android:textColor="#e9e9e9"
            android:textSize="10sp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            android:layout_below="@+id/EditText_Verification_verificationCode" />

        <EditText
            android:id="@+id/EditText_Verification_verificationCode"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#ffffff"
            android:hint="@string/identifying_code"
            android:textSize="11sp"
            android:singleLine="true"
            android:textColorHint="#7f7f7f7f"
            android:password="true"
            android:gravity="center"
            android:layout_below="@+id/EditText_Verification_userName"
            android:layout_alignParentStart="true"
            android:layout_marginTop="1dp"
            android:layout_alignEnd="@+id/Button_Verification" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/get_identifying_code"
            android:id="@+id/Button_Verification_getVerificationCode"
            android:layout_above="@+id/EditText_Register_userPassword"
            android:layout_toEndOf="@+id/EditText_Verification_verificationCode"
            android:layout_below="@+id/EditText_Verification_userName"
            android:textSize="11sp"
            android:textColor="#e9e9e9"
            android:allowUndo="true"
            android:background="#393839"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp" />

    </RelativeLayout>
</LinearLayout>
