<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#000000"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Button_ChangePasswordActivity_to_MainActivity"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/btn_login_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:textSize="13sp"
            android:textColor="#f8f8f8"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/TextView_ChangePassword_Title" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#e3e3e3e3"
        android:orientation="vertical">

        <EditText
            android:id="@+id/EditText_ChangePassword_userPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#ffffff"
            android:hint="@string/password_tip1"
            android:textSize="11sp"
            android:layout_alignParentEnd="false"
            android:singleLine="true"
            android:textColorHint="#7f7f7f7f"
            android:password="true"
            android:layout_alignParentStart="false"
            android:layout_marginTop="1dp"
            android:gravity="center" />

        <EditText
            android:id="@+id/EditText_ChangePassword_userPassword_Check"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:background="#ffffff"
            android:hint="@string/password_tip2"
            android:textSize="11sp"
            android:layout_below="@+id/EditText_ChangePassword_userPassword"
            android:layout_alignParentStart="false"
            android:singleLine="true"
            android:textColorHint="#7f7f7f7f"
            android:password="true"
            android:layout_marginTop="1dp"
            android:gravity="center" />

        <Button
            android:id="@+id/Button_ChangePassword_Verification"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:background="@drawable/btn_login_login"
            android:gravity="center"
            android:text="@string/change"
            android:textColor="#e9e9e9"
            android:textSize="10sp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            android:layout_below="@+id/EditText_Register_userPassword_Check" />

    </RelativeLayout>
</LinearLayout>