<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_jordan"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/LinearLayout_MainActivity_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp">

            <Button
                android:id="@+id/Button_MainActivity_Login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@drawable/btn_main_login"
                android:text="@string/login"
                android:textColor="#303030"
                android:textSize="12sp" />

            <Button
                android:id="@+id/Button_MainActivity_Register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="1dp"
                android:layout_weight="1"
                android:background="@drawable/btn_main_register"
                android:text="@string/register"
                android:textColor="#c6c6c6"
                android:textSize="12sp" />
        </LinearLayout>

        <Button
            android:id="@+id/Button_MainActivity_Skip_Login"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:background="#00ffffff"
            android:enabled="true"
            android:text="@string/skip_login"
            android:textColor="#a4a4a4"
            android:textSize="14sp"
            android:layout_above="@+id/LinearLayout_MainActivity_1"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
</LinearLayout>