<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#000000"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Button_LoginActivity_Back"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/btn_login_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/login"
            android:textColor="#f8f8f8"
            android:textSize="13dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#e3e3e3e3"
        android:orientation="vertical">

        <EditText
            android:id="@+id/EditText_LoginActivity_UserName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="1dp"
            android:background="#ffffff"
            android:gravity="center"
            android:hint="@string/name_tip"
            android:singleLine="true"
            android:textColorHint="#7f484848"
            android:textSize="11dp" />

        <EditText
            android:id="@+id/EditText_LoginActivity_UserPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/EditText_LoginActivity_UserName"
            android:gravity="center"
            android:background="#ffffff"
            android:hint="@string/password_tip1"
            android:password="true"
            android:singleLine="true"
            android:textColorHint="#7F484848"
            android:textSize="11dp" />

        <TextView
            android:id="@+id/TextView_LoginActivity_ForgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/EditText_LoginActivity_UserPassword"
            android:layout_marginRight="10dp"
            android:layout_marginTop="12dp"
            android:text="@string/ForgetPW"
            android:textColor="#6c6c6c"
            android:textSize="12dp" />

        <Button
            android:id="@+id/Button_LoginActivity_Login"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_below="@+id/TextView_LoginActivity_ForgetPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            android:background="@drawable/btn_login_login"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="#e9e9e9"
            android:textSize="10dp" />

        <TextView
            android:id="@+id/TextView_LoginActivity_Result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/TextView_LoginActivity_ForgetPassword"
            android:layout_centerHorizontal="true"
            android:textSize="12sp"
            android:gravity="center" />

    </RelativeLayout>
</LinearLayout>