<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#000000"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Button_RegisterActivity_to_MainActivity"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/btn_login_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="20sp"
            android:textColor="#f8f8f8"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/TextView_Register" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#e3e3e3e3"
        android:orientation="vertical">

        <EditText
            android:id="@+id/EditText_Register_userName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#ffffff"
            android:hint="@string/name_tip"
            android:textCursorDrawable="@null"
            android:textSize="16sp"

            android:singleLine="true"
            android:textColorHint="#7f7f7f7f"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp" />

        <EditText
            android:id="@+id/EditText_Register_userPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#ffffff"
            android:hint="@string/password_tip1"
            android:textCursorDrawable="@null"
            android:textSize="16sp"
            android:layout_below="@+id/EditText_Register_userName"
            android:layout_alignParentEnd="false"
            android:singleLine="true"
            android:textColorHint="#7f7f7f7f"
            android:password="true"
            android:layout_alignParentStart="false"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp" />

        <EditText
            android:id="@+id/EditText_Register_userPassword_Check"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:background="#ffffff"
            android:hint="@string/password_tip2"
            android:textCursorDrawable="@null"
            android:textSize="16sp"
            android:layout_below="@+id/EditText_Register_userPassword"
            android:layout_alignParentStart="false"
            android:singleLine="true"
            android:textColorHint="#7f7f7f7f"
            android:password="true"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp" />

        <Button
            android:id="@+id/Button_Register"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:background="@drawable/btn_login_login"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="#e9e9e9"
            android:textSize="13sp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            android:layout_below="@+id/TextView_Register_Result" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TextView_Register_Result"
            android:layout_below="@+id/EditText_Register_userPassword_Check"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:textSize="12sp" />

    </RelativeLayout>
</LinearLayout>